# RailShotTV

./: .gitignore  CURSOR_DESIGN_SPEC.md  LICENSE  QT6_DEVELOPER_HANDOFF.md  README.md  UI_DESIGN_SPEC.md  ideas.md  package.json  template.json  video_chrome_SaLCeyuNrs_analysis_20260716_174236.md
.cursor/rules/: auto-commit-push.mdc
.github/workflows/: native-ci.yml
Professional UI Designs for Livestreaming Windows App/: ChatPage.cpp  ChatPanel.tsx  Dashboard.tsx  DashboardPage.h  EventModel.h  GoLiveDialog.h  GoLiveModal.tsx  MainWindow.cpp  OBSAudioManager.cpp  OBSAudioManager.h  OBSCore.h  OBSDisplay.cpp  OBSDisplay.h  OBSOutputManager.h  OBSSourceManager.cpp  OBSSourceManager.h  OBSStatsMonitor.h  OverlayBrowser.cpp  OverlayBrowser.h  SceneCard.h  SceneContext.tsx  SceneEditor.tsx  SceneEditorPage.cpp  SceneEditorPage.h  SceneModel.cpp  ScoreboardState.h  SidebarRail.h  SourcePropertiesPanel.h  StreamingContext.tsx  TwitchChatClient.h  VUMeter.h  main.cpp
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AppSidebar.tsx  (+2 more)
docs/architecture/: OBS_FEATURE_PARITY.md  OVERVIEW.md
docs/design/: ORIGINAL_UI_RESTORE_SPEC.md
docs/licensing/: EULA.txt  FFMPEG_BUILD.md  THIRD_PARTY_NOTICES.md
docs/release/: RELEASE.md
native/: CMakeLists.txt  CMakePresets.json  README.md
native/cmake/: RailShotDependencies.cmake  RailShotPackaging.cmake
native/packaging/windows/: RailShotTV.wxs
native/resources/: railshot.qrc
native/resources/overlays/: break-and-run.html  match-point.html  player-intro.html
native/resources/styles/: railshot.qss
native/resources/windows/: railshot.rc
native/src/app/: Application.cpp  Application.h  main.cpp
native/src/audio/: AudioClock.cpp  AudioClock.h  AudioGraph.cpp  AudioGraph.h  AudioMeter.cpp  AudioMeter.h  AudioMonitor.cpp  AudioMonitor.h  AudioTypes.h  WasapiCapture.cpp  WasapiCapture.h
native/src/browser/: BrowserIpc.h  browser_helper_main.cpp
native/src/capture/: AudioSource.cpp  AudioSource.h  BrowserSource.cpp  BrowserSource.h  CaptureManager.cpp  CaptureManager.h  ColorSource.cpp  ColorSource.h  DesktopDuplicationCapture.cpp  DesktopDuplicationCapture.h  FrameBus.cpp  FrameBus.h  IVideoSource.h  ImageSource.cpp  ImageSource.h  MediaFoundationCamera.cpp  MediaFoundationCamera.h  MediaSource.cpp  MediaSource.h  NdiSource.cpp  NdiSource.h  OverlayRenderer.cpp  OverlayRenderer.h  OverlaySource.cpp  OverlaySource.h  SlideshowSource.cpp  SlideshowSource.h  TextSource.cpp  TextSource.h  WindowEnumerator.cpp  WindowEnumerator.h  WindowsGraphicsCapture.cpp  WindowsGraphicsCapture.h
native/src/chat/: ChatService.cpp  ChatService.h  PlatformAdapters.cpp  PlatformAdapters.h
native/src/compositor/: D3D11Compositor.cpp  D3D11Compositor.h  D3D11Device.cpp  D3D11Device.h  LutCubeLoader.cpp  LutCubeLoader.h  PreviewSurface.cpp  PreviewSurface.h  Shaders.h  TransitionEngine.cpp  TransitionEngine.h
native/src/core/: EngineController.cpp  EngineController.h  JsonSchema.cpp  JsonSchema.h  Logger.cpp  Logger.h  ProfileCollectionStore.cpp  ProfileCollectionStore.h  Project.cpp  Project.h  RecordingPath.cpp  RecordingPath.h  SceneGraph.cpp  SceneGraph.h  SecretStore.cpp  SecretStore.h  SettingsStore.cpp  SettingsStore.h  Types.cpp  Types.h  UndoStack.cpp  UndoStack.h
native/src/encoding/: AacEncoder.cpp  AacEncoder.h  EncoderFactory.cpp  EncoderFactory.h  IEncoder.h  MfH264Encoder.cpp  MfH264Encoder.h  SoftwareEncoder.cpp  SoftwareEncoder.h
native/src/output/: OutputHub.cpp  OutputHub.h
native/src/overlays/: ReplayBuffer.cpp  ReplayBuffer.h  VirtualCamera.cpp  VirtualCamera.h
native/src/platform/windows/: ComInitializer.cpp  ComInitializer.h  DxgiHelpers.cpp  DxgiHelpers.h  WinCrashHandler.cpp  WinCrashHandler.h
native/src/recording/: IsoRecordManager.cpp  IsoRecordManager.h  MkvRecorder.cpp  MkvRecorder.h  RecordingSession.cpp  RecordingSession.h  RemuxUtil.cpp  RemuxUtil.h
native/src/schedule/: ScheduleModel.cpp  ScheduleModel.h
native/src/scoreboard/: ScoreboardModel.cpp  ScoreboardModel.h
native/src/streaming/: RtmpOutput.cpp  RtmpOutput.h  StreamSession.cpp  StreamSession.h
native/src/telemetry/: HealthTelemetry.cpp  HealthTelemetry.h
native/src/ui/: DropFiles.cpp  DropFiles.h  HotkeyDispatcher.cpp  HotkeyDispatcher.h  MainWindow.cpp  MainWindow.h  Motion.cpp  Motion.h  Theme.cpp  Theme.h
native/src/ui/pages/: AnalyticsPage.cpp  AnalyticsPage.h  ChatPage.cpp  ChatPage.h  DashboardPage.cpp  DashboardPage.h  SceneEditorPage.cpp  SceneEditorPage.h  SchedulePage.cpp  SchedulePage.h  ScoreboardPage.cpp  ScoreboardPage.h  SettingsPage.cpp  SettingsPage.h
native/src/ui/widgets/: AddSourceDialog.cpp  AddSourceDialog.h  AdvAudioDialog.cpp  AdvAudioDialog.h  AudioMixerWidget.cpp  AudioMixerWidget.h  BottomToolbar.cpp  BottomToolbar.h  ExtraBrowserPanel.cpp  ExtraBrowserPanel.h  FiltersDialog.cpp  FiltersDialog.h  GoLiveDialog.cpp  GoLiveDialog.h  InputTilesWidget.cpp  InputTilesWidget.h  InteractDialog.cpp  InteractDialog.h  MultiCorderPanel.cpp  MultiCorderPanel.h  MultiviewWindow.cpp  MultiviewWindow.h  ObsStatsDock.cpp  ObsStatsDock.h  ObsStatusBarWidget.cpp  ObsStatusBarWidget.h  OverlayLibraryWidget.cpp  OverlayLibraryWidget.h  PlayListPanel.cpp  PlayListPanel.h  PreviewWidget.cpp  PreviewWidget.h  ProjectorWindow.cpp  ProjectorWindow.h  SceneListWidget.cpp  SceneListWidget.h  ScoreboardControlsWidget.cpp  ScoreboardControlsWidget.h  ScoreboardSettingsDialog.cpp  ScoreboardSettingsDialog.h  (+22 more)
native/src/ui/widgets/properties/: SourcePropertiesPanel.cpp  SourcePropertiesPanel.h
native/src/vcam/: VCamIpc.h  railshot_vcam.cpp
native/tests/: CMakeLists.txt
native/tests/integration/: test_creator_features.cpp  test_engine_lifecycle.cpp  test_mf_encoder.cpp  test_mkv_recording.cpp  test_phase5.cpp  test_rtmp_flv.cpp
native/tests/unit/: test_audio_meter.cpp  test_json_schema.cpp  test_project.cpp  test_schedule.cpp  test_scoreboard.cpp
scripts/: harvest-wix.ps1  install-ffmpeg.ps1  install-webview2.ps1  register-vcam.ps1  sign-release.ps1  soak-test.ps1  stage-deploy.ps1
(+13 files in other folders)
